--- a/index.css
+++ b/index.css
@@ -1,16 +1,9 @@
 @keyframes example {
     0%   {opacity: 0;}
     50%  {opacity: 0.5;}
-    100% {}
+    100% {opacity: 0;}
   }
-@keyframes example0 {
-    0%   {background-color: greenyellow;}
-    50%  {background-color: yellowgreen;}
-    100% {background-color: white;}
-  }
-#table1 {
-    background-color: greenyellow;
-}
+
 table {
     position: relative;
     overflow: hidden;
@@ -23,7 +16,12 @@ td {
     display: none;
 }
 #cover {
-    display: none;
+    position: absolute;
+    width: 100%;
+    height:100%;
+    top: 0;
+    left:0;
+    background-color: transparent;
 }
 #picture {
     display: flex;
