--- a/index.css
+++ b/index.css
@@ -12,7 +12,12 @@ td {
     padding: 0px;
     overflow: hidden;
 }
-#topleft,#topright,#xchoice {
+
+#main {
+    padding: 0 5px !important;
+    overflow: hidden;
+}
+#topleft,#topright {
     display: none;
 }
 #cover {
@@ -30,3 +35,38 @@ td {
     width: 200px;
     height: 200px;
 }
+#xchoice,#selectimage,#selectsize,#top,#nexttop {
+        margin-top: 0.25rem !important;
+}
+
+@media screen and (min-width: 480px) and (min-height: 480px) {
+    #xchoice,#selectimage,#selectsize,#top,#nexttop {
+        margin-top: 0.5rem !important;
+        margin-bottom: 0.5rem !important;
+    }
+}
+@media screen and (min-height: 568px) {
+    #xchoice,#selectimage,#selectsize,#top,#nexttop {
+        margin-top: 1rem !important;
+        margin-bottom: 1rem !important;
+    }
+}
+@media screen and (max-width: 360px) {
+    #selectimage,#selectsize {
+        font-size: 1.8rem !important;
+    }
+}
+@media screen and (max-height: 480px) {
+    #selectimage,#selectsize {
+        font-size: 1.2rem !important;
+    }
+    #xchoice {
+        font-size: 1.8rem !important;
+    }
+}
+@media screen and (max-width: 320px) {
+    #top .btn {
+        padding: 5px !important;
+    }
+}
+
